tests/valid/trait/generic_impl_exact_args.facet
trait Convert<T>;

struct Box<T> {
  value: affine T
}

impl<T> Convert<affine T> for affine Box<affine T>;

fn main() -> unrestricted () {
  ()
}
