tests/invalid/trait/trait_own_bound_unsatisfied.facet
trait Show;
trait Convert<T> where T: Show;

struct Box {
  value: affine isize
}

impl Convert<affine isize> for affine Box;

fn main() -> unrestricted () {
  ()
}
